name:                ip-notify
version:             0.1.0.0
synopsis:            Notify of IP address change
description:         Please see README.md
homepage:            https://github.com/blakesikes/ip-notify#readme
license:             BSD3
license-file:        LICENSE
author:              Blake Sikes
copyright:           2016 Blake Sikes
category:            Utility
build-type:          Simple
cabal-version:       >=1.10

executable ip-notify
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                      ,turtle
                      ,acid-state
